# brouas

./: Cargo.toml  pager.brouas
benches/: brouas.rs
src/: arena.rs  block.rs  bptree.rs  buffer.rs  fixtures.rs  hash.rs  index.rs  io.rs  lib.rs  merkle.rs  object.rs  pager.rs  paging.rs  storage.rs  tree.rs  utils.rs
src/arena/: error.rs  local_index.rs  tl_arena.rs  tl_element_ref.rs  traits.rs
src/bptree/: alg.rs  branch.rs  error.rs  leaf.rs  node.rs  nodes.rs  result.rs
src/fixtures/: bptree.rs  pager.rs
src/io/: lsm.rs  traits.rs
src/object/: buffer.rs  counter.rs  error.rs  io.rs  meta.rs
src/object/io/: traits.rs
src/pager/: allocator.rs  bptree.rs  btree.rs  btree_page.rs  buffer.rs  error.rs  header.rs  id.rs  nonce.rs  offset.rs  overflow.rs  page.rs  page_header.rs  page_id.rs  page_nonce.rs  page_type.rs  result.rs  storage.rs  stream.rs  traits.rs  utils.rs
src/pager/bptree/: cell_capacity.rs  cell_id.rs  cell_size.rs  header.rs  leaf.rs  node_offset.rs  node_type.rs
src/pager/btree/: branch.rs  header.rs  leaf.rs  node_header.rs  node_type.rs
src/pager/btree_page/: branch_cell.rs  leaf_cell.rs  node_type.rs  page_header.rs
src/pager/page/: error.rs  header.rs  id.rs  metadata.rs  nonce.rs  offset.rs  page_type.rs  result.rs  (+1 more)
src/paging/: allocator.rs  error.rs  page.rs  pager.rs  traits.rs
src/storage/: impls.rs
src/tree/: alg.rs  branch.rs  cells.rs  error.rs  indexes.rs  leaf.rs  node.rs  node_ref.rs  nodes.rs  result.rs  transaction.rs  tree.rs
src/utils/: automaton.rs  collections.rs
working/: db  snap.00000000000000F9
(+21 files in other folders)
